php-src/Zend/tests/ns_092.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory
==== MIXED ====
Foo\Bar\A::__construct
Foo\Bar\B::__construct
int(2)
===== CONSTANTS ====
int(100)
int(1)
int(2)
bool(false)
===== FUNCTIONS ====
Fiz\Biz\Buz\buz
Foo\Bar\fiz
Foo\Bar\biz
Foo\Bar\buz

Fatal error: Uncaught Error: Call to undefined function Foo\Bar\A() in /root/php-src/Zend/tests/ns_092.php:45
Stack trace:
#0 {main}
  thrown in /root/php-src/Zend/tests/ns_092.php on line 45